--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
      <meta charset="UTF-8">
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
      <title>SamGohPhoto</title>
-     <link rel="stylesheet" href="/styles/p3styles.css">
+     <link rel="stylesheet" href="styles/p3styles.css">
 </head>
 
 <body>
