--- a/resume2.html
+++ b/resume2.html
@@ -21,15 +21,15 @@
         <p>Email: Samgoh@uoregon.edu | Phone: (612) 965-8798 </p>
         <div class="contact_icon">
         <a href="tel:+1(612)-965-8798" class="contact-link">
-            <img src="/images/Phone_icon.png" alt="Phone" class="contact-icon" width="20" height="20" >
+            <img src="images/Phone_icon.png" alt="Phone" class="contact-icon" width="20" height="20" >
             612-965-8798
             </a>
         <a href="mailto:Samgoh@uoregon.edu" class="contact-link">
-            <img src="/images/mail.png" alt="Email" class="contact-icon" width="20" height="20" >
+            <img src="images/mail.png" alt="Email" class="contact-icon" width="20" height="20" >
             Samgoh@uoregon.edu
             </a>
         <a href="https://linkedin.com/in/sam-goh-844252332" class="contact-link">
-            <img src="/images/Linkdn.png" alt="Linkedin" class="contact-icon" width="20" height="20" >
+            <img src="images/Linkdn.png" alt="Linkedin" class="contact-icon" width="20" height="20" >
             Linkedin
             </a>
         </div>
