--- a/resume2.html
+++ b/resume2.html
@@ -12,7 +12,7 @@
         <div class="nav-links" id="navLinks">
         <a href="index.html">Home</a>
         <a href="Aboutme.html">About Me </a> 
-        <a href="/p2/resume2.html">Resume </a>
+        <a href="resume2.html">Resume </a>
         </div>
         <button class="mobile-menu-btn" onclick="toggleMenu()">☰</button>
         </nav>
